# byebg

./: .gitignore  Dockerfile  README.md  byebg.reg  byebg.spec  docker-compose.pyinstaller.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
compiler/: byebg_win64.iss
src/: byebg.py
